# aMAZEingPASTELularAutomata

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: audio.js  enemy.js  game.js  main.js  maze.js  player.js  renderer.js  style.css  ui.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
