[package]
name = "app"
version = "1.0.0"
description = "aMAZE-ing PASTELular Automata"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# THIS IS THE IMPORTANT PART - make sure it's here!
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
